@@ -36,3 +36,7 @@ end
 When(/^I retrieve a table element bys "(.*?)" and "(.*?)"$/) do |param1, param2|
   @element = @page.send "table_#{param1}_#{param2}_element".to_sym
 end
+
+When(/^I retrieve a table element while the script is executing$/) do
+  @element = @page.table_element(:id => 'table_id')
+end
