@@ -11,6 +11,7 @@
   * #radio_button_element
   * #div_element
   * #span_element
+  * #table_element
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
